# AionX

./: .gitignore  AGENTS.md  PHASE1_REVIEW.md  PLALNS.md  README.md  components.json  memory.md  package-lock.json  package.json  plans.md  skills-lock.json  tsconfig.json  uno.config.ts  vite.config.ts
.playwright-cli/: page-2026-03-17T04-57-26-674Z.yml  page-2026-03-17T04-58-18-087Z.yml  page-2026-03-17T04-58-20-740Z.yml  page-2026-03-17T04-58-23-592Z.yml  page-2026-03-17T04-58-26-299Z.yml  page-2026-03-17T04-58-28-925Z.yml  page-2026-03-17T04-58-31-618Z.yml  page-2026-03-17T04-58-34-250Z.yml  page-2026-03-17T04-58-37-012Z.yml  page-2026-03-17T05-02-43-921Z.yml  page-2026-03-17T05-04-19-930Z.yml  page-2026-03-17T05-04-35-505Z.yml
docs/: INSTALLATION_GUIDE.md  PHASE0_SUMMARY.md  PHASE1_COMPLETION_REPORT.md  PLAN.md  PROJECT_STATUS.md  settings-page-comparison-analysis.md  前端统一重构蓝图.md  设置页迁移实施清单.md
docs/planning/: 01-项目概览与现状分析.md  02-技术选型与架构设计.md  03-Rust后端设计.md  04-前端重构设计.md  05-数据库与存储方案.md  06-功能模块拆分与实现计划.md  07-开发路线图与里程碑.md  07-项目实施路线图-part2.md  07-项目实施路线图.md  08-目录结构设计.md  09-UI一致性迁移指南.md  README.md  前端一致性评估-2026-03-16.md
e2e-tests/webdriverio/: package-lock.json  package.json  wdio.conf.mjs
e2e-tests/webdriverio/scripts/: run-wdio.mjs
e2e-tests/webdriverio/tests/: smoke.desktop.e2e.mjs  smoke.e2e.mjs  smoke.responsive.e2e.mjs  visual.audit.e2e.mjs
public/: extension-host-smoke.html
scripts/: verify-phase-consistency.mjs
src/: App.tsx  bindings.ts  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  state.rs
src-tauri/src/agent/: mod.rs
src-tauri/src/agents/: acp.rs  codex.rs  gemini.rs  mod.rs  nanobot.rs  openclaw.rs  process.rs  service.rs  subprocess_agent.rs  traits.rs  types.rs
src-tauri/src/channels/: lark.rs  mod.rs  telegram.rs
src-tauri/src/commands/: agent.rs  assistant_plugin.rs  channel.rs  chat.rs  cron.rs  extension.rs  file.rs  gemini.rs  mcp.rs  mod.rs  model.rs  settings.rs  tools.rs  webui.rs
src-tauri/src/dao/: assistant_plugin.rs  channel.rs  chat.rs  cron_job.rs  extension.rs  mcp_server.rs  message.rs  mod.rs  user.rs
src-tauri/src/db/: migration.rs  mod.rs
src-tauri/src/db/repositories/: assistant_plugin.rs  channel_plugin.rs  chat.rs  cron_job.rs  extension.rs  mcp_server.rs  message.rs  mod.rs  user.rs
src-tauri/src/events/: agent.rs  bridge.rs  bus.rs  channel.rs  cron.rs  mod.rs  types.rs
src-tauri/src/extensions/: mod.rs
src-tauri/src/models/: about.rs  agent.rs  assistant_plugin.rs  channel.rs  channel_plugin.rs  chat.rs  common.rs  cron_job.rs  display.rs  extension.rs  gemini.rs  mcp_server.rs  message.rs  mod.rs  model.rs  system.rs  tools.rs  user.rs  webui.rs
src-tauri/src/services/: auth.rs  channel.rs  chat.rs  cron.rs  message.rs  mod.rs
src-tauri/src/utils/: mod.rs
src-tauri/src/webui/: mod.rs  server.rs
src-tauri/src/webui/middleware/: auth.rs
src-tauri/src/webui/routes/: api.rs  auth.rs  mod.rs  ws.rs
src/components/: index.ts
src/constants/: config.ts  routes.ts
src/contexts/: LayoutContext.tsx
src/i18n/: index.ts
src/pages/: TestPage.tsx
src/router/: index.tsx
src/services/: agent.ts  chat.ts  settings.ts
src/stores/: authStore.ts  theme.ts  themeStore.ts
src/styles/: app-shell.css  arco-override.css  global.css
src/theme/: ThemeProvider.tsx  index.ts  theme.ts  tokens.ts
tmp/settings-legacy/: About.tsx  DisplaySettings.tsx  ExtensionSettings.tsx  GeminiSettings.tsx  SystemSettings.tsx
(+193 files in other folders)
